--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "debug": "tsc --incremental --sourceMap",
-    "test": "eslint --ext=js,ts ."
+    "test": "npm run lint && jest --no-cache",
+    "lint": "eslint --ext=js,ts ."
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,16 @@
   },
   "homepage": "https://github.com/takashiro/qbittorrent-api#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.3",
+    "node-fetch": "^2.6.7",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.6.4"
   }
 }
